[add] fix input size oon safari (fix padding)

--- a/webplugin/css/app/km-rich-message.css
+++ b/webplugin/css/app/km-rich-message.css
@@ -1441,7 +1441,7 @@
 }
 .mck-form-radio-wrapper label {
     position: relative;
-    margin-left: 26px;
+    padding-left: 26px;
 }
 .mck-form-textarea-wrapper textarea {
     resize: vertical;
